--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
         <div class="input-container">
             <div class="price-input">
                 <div class="price-field">
-                    <span>Minimum Price</span>
+                    <span>Minimum Price:</span>
                     <input type="number" class="min-input" value="2500">
                 </div>
                 <div class="price-field">
-                    <span>Maximum Price</span>
+                    <span>Maximum Price:</span>
                     <input type="number" class="max-input" value="8500">
                 </div>
             </div>
